--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,7 @@ body {
   background-color: #f7f7f7;
   margin: 0;
 }
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+}
