update: sidebar menu

--- a/src/app/modules/layout/components/sidebar/sidebar.component.html
+++ b/src/app/modules/layout/components/sidebar/sidebar.component.html
@@ -3,9 +3,16 @@
   <hr />
   <ul>
     <li>
-      <a href=""
-        ><span class="material-symbols-outlined">lists</span> Reportes</a
-      >
+      <a href="">
+        <span class="material-symbols-outlined">home</span>
+        Inicio
+      </a>
+    </li>
+    <li>
+      <a href="">
+        <span class="material-symbols-outlined">lists</span>
+        Reportes
+      </a>
     </li>
   </ul>
 </aside>
