--- a/src/app/modules/layout/components/sidebar/sidebar.component.css
+++ b/src/app/modules/layout/components/sidebar/sidebar.component.css
@@ -18,6 +18,9 @@ ul {
   margin: 0;
   margin-top: 1.4rem;
   padding: 0 calc(15% / 2);
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 }
 
 ul li {
@@ -33,6 +36,10 @@ ul li a {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+}
+
+ul li:hover {
+  background-color: #cc22be;
 }
 
 @media (min-width: 700px) {
