replace sidebar to navbar

--- a/src/app/modules/layout/components/navbar/navbar.component.html
+++ b/src/app/modules/layout/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<aside>
+<nav>
   <header>
     <h1>Servinet Computers</h1>
   </header>
@@ -17,4 +17,4 @@
       </a>
     </li>
   </ul>
-</aside>
+</nav>
