--- a/src/app/modules/layout/components/navbar/navbar.component.css
+++ b/src/app/modules/layout/components/navbar/navbar.component.css
@@ -8,7 +8,7 @@ hr {
   width: 85%;
 }
 
-aside {
+nav {
   color: #f7f7f7;
   background-color: #9a208c;
 }
@@ -43,7 +43,7 @@ ul li:hover {
 }
 
 @media (min-width: 700px) {
-  aside {
+  nav {
     width: 320px;
     height: 100vh;
     position: fixed;
