--- a/src/app/modules/layout/components/navbar/navbar.component.css
+++ b/src/app/modules/layout/components/navbar/navbar.component.css
@@ -10,7 +10,7 @@ hr {
 
 nav {
   color: #f7f7f7;
-  background-color: #9a208c;
+  background-color: #124c59;
 }
 
 ul {
@@ -24,7 +24,6 @@ ul {
 }
 
 ul li {
-  background-color: #a73b9e;
   font-size: 1.1rem;
   border-radius: 0.5rem;
 }
@@ -34,17 +33,22 @@ ul li a {
   text-decoration: none;
   padding: 0.6rem 1rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 0.5rem;
 }
 
+ul li a span {
+  transform: scale(1.4);
+}
+
 ul li:hover {
-  background-color: #cc22be;
+  background-color: #1a6e81;
 }
 
 @media (min-width: 700px) {
   nav {
-    width: 320px;
+    width: 250px;
     height: 100vh;
     position: fixed;
     top: 0;
