--- a/src/app/modules/layout/components/navbar/navbar.component.html
+++ b/src/app/modules/layout/components/navbar/navbar.component.html
@@ -5,13 +5,13 @@
   <hr />
   <ul>
     <li>
-      <a href="">
+      <a routerLink="/home">
         <span class="material-symbols-outlined">home</span>
         Inicio
       </a>
     </li>
     <li>
-      <a href="">
+      <a routerLink="/reports">
         <span class="material-symbols-outlined">lists</span>
         Reportes
       </a>
