add: new shared module and the header title is extracted

--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,6 +1,4 @@
-<header>
-  <h2>Inicio</h2>
-</header>
+<app-header-title headerTitle="Inicio"></app-header-title>
 <main>
   <section role="region" id="new-transfer">
     <form>
