--- a/src/app/modules/reports/pages/reports/reports.component.html
+++ b/src/app/modules/reports/pages/reports/reports.component.html
@@ -1,1 +1,47 @@
-<p>reports works!</p>
+<app-header-title headerTitle="Reportes"></app-header-title>
+<main>
+  <section role="region" id="transfers">
+    <table>
+      <thead>
+        <tr>
+          <th>Código</th>
+          <th>Plataforma</th>
+          <th>Valor</th>
+          <th>Hora</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>MoviiRed</td>
+          <td>15.000</td>
+          <td>15:40</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>MoviiRed</td>
+          <td>15.000</td>
+          <td>15:40</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>MoviiRed</td>
+          <td>15.000</td>
+          <td>15:40</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>MoviiRed</td>
+          <td>15.000</td>
+          <td>15:40</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>MoviiRed</td>
+          <td>15.000</td>
+          <td>15:40</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+</main>
