--- a/src/app/modules/reports/pages/reports/reports.component.css
+++ b/src/app/modules/reports/pages/reports/reports.component.css
@@ -1,5 +1,6 @@
 #transfers {
-  width: 60%;
+  width: 80%;
+  max-width: 840px;
   margin: auto;
   box-shadow: 0 0 0.6rem 0.2rem #77777740;
   background-color: #ffffff;
