--- a/src/app/modules/reports/pages/reports/reports.component.html
+++ b/src/app/modules/reports/pages/reports/reports.component.html
@@ -1,5 +1,12 @@
 <app-header-title headerTitle="Reportes"></app-header-title>
 <main>
+  <section role="region" id="calendars">
+    <form>
+      <input type="date" />
+      <input type="date" />
+      <button type="submit">Consultar</button>
+    </form>
+  </section>
   <section role="region" id="transfers">
     <table>
       <thead>
