--- a/src/app/modules/reports/pages/reports/reports.component.css
+++ b/src/app/modules/reports/pages/reports/reports.component.css
@@ -20,10 +20,14 @@
 
 button {
   font-weight: 600;
+  background-color: #f7f7f7;
+  color: #298296;
 }
 
 button:hover {
   cursor: pointer;
+  background-color: #298296;
+  color: #f7f7f7;
 }
 
 #calendars,
