feature: new section for the report stats and 'print' button

--- a/src/app/modules/reports/pages/reports/reports.component.html
+++ b/src/app/modules/reports/pages/reports/reports.component.html
@@ -51,4 +51,12 @@
       </tbody>
     </table>
   </section>
+  <hr />
+  <section role="region" id="totals">
+    <p>Transferencias: 4</p>
+    <div class="separator"></div>
+    <p>Total: $75.000</p>
+    <div class="separator"></div>
+    <button>Imprimir</button>
+  </section>
 </main>
