--- a/src/app/modules/reports/pages/reports/reports.component.css
+++ b/src/app/modules/reports/pages/reports/reports.component.css
@@ -18,20 +18,22 @@
   border: 0.15rem solid #124c59;
 }
 
-button {
+#calendars button {
   font-weight: 600;
   background-color: #f7f7f7;
   color: #298296;
 }
 
-button:hover {
+#calendars button:hover {
   cursor: pointer;
   background-color: #298296;
   color: #f7f7f7;
 }
 
 #calendars,
-#transfers {
+#transfers,
+#totals,
+hr {
   width: 80%;
   max-width: 840px;
 }
@@ -75,4 +77,30 @@ tbody tr:hover {
 
 td:nth-of-type(3)::before {
   content: "$";
+}
+
+hr {
+  margin: 2rem auto;
+  border: 1px solid #afafaf;
+}
+
+#totals {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.5rem;
+  margin: -1rem auto;
+}
+
+#totals button {
+  height: 1.8rem;
+  padding: 0.4rem 1.5rem;
+}
+
+#totals .separator {
+  display: flex;
+  align-self: center;
+  width: 2px;
+  height: 2rem;
+  background-color: #afafaf;
 }
