update: the final stats design

--- a/src/app/modules/reports/pages/reports/reports.component.html
+++ b/src/app/modules/reports/pages/reports/reports.component.html
@@ -53,9 +53,9 @@
   </section>
   <hr />
   <section role="region" id="totals">
-    <p>Transferencias: 4</p>
+    <p>Transferencias: <span>4</span></p>
     <div class="separator"></div>
-    <p>Total: $75.000</p>
+    <p>Total: <span>$75.000</span></p>
     <div class="separator"></div>
     <button>Imprimir</button>
   </section>
