--- a/src/app/modules/reports/pages/reports/reports.component.css
+++ b/src/app/modules/reports/pages/reports/reports.component.css
@@ -86,15 +86,31 @@ hr {
 
 #totals {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   gap: 0.5rem;
   margin: -1rem auto;
 }
 
+#totals p {
+  font-size: 0.9rem;
+  color: #2f2f2f;
+}
+
+#totals p span {
+  font-style: italic;
+}
+
 #totals button {
   height: 1.8rem;
-  padding: 0.4rem 1.5rem;
+  padding: 0 1.6rem;
+  font-family: inherit;
+  font-size: 0.8rem;
+  font-weight: 600;
+  background-color: #298296;
+  color: #f7f7f7;
+  border-radius: 0.5rem;
+  border: 0.15rem solid #124c59;
 }
 
 #totals .separator {
@@ -103,4 +119,9 @@ hr {
   width: 2px;
   height: 2rem;
   background-color: #afafaf;
+}
+
+#totals button:hover {
+  cursor: pointer;
+  background-color: #3298af;
 }
