--- a/src/app/modules/reports/pages/reports/reports.component.html
+++ b/src/app/modules/reports/pages/reports/reports.component.html
@@ -1,62 +1,11 @@
 <app-header-title headerTitle="Reportes"></app-header-title>
 <main>
   <section role="region" id="calendars">
-    <form>
-      <input type="date" />
-      <input type="date" />
-      <button type="submit">Consultar</button>
-    </form>
+    <app-calendars-form></app-calendars-form>
   </section>
   <section role="region" id="transfers">
-    <table>
-      <thead>
-        <tr>
-          <th>Código</th>
-          <th>Plataforma</th>
-          <th>Valor</th>
-          <th>Hora</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>MoviiRed</td>
-          <td>15.000</td>
-          <td>15:40</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>MoviiRed</td>
-          <td>15.000</td>
-          <td>15:40</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>MoviiRed</td>
-          <td>15.000</td>
-          <td>15:40</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>MoviiRed</td>
-          <td>15.000</td>
-          <td>15:40</td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>MoviiRed</td>
-          <td>15.000</td>
-          <td>15:40</td>
-        </tr>
-      </tbody>
-    </table>
+    <app-transfers-table></app-transfers-table>
   </section>
   <hr />
-  <section role="region" id="totals">
-    <p>Transferencias: <span>4</span></p>
-    <div class="separator"></div>
-    <p>Total: <span>$75.000</span></p>
-    <div class="separator"></div>
-    <button>Imprimir</button>
-  </section>
+  <app-final-stats></app-final-stats>
 </main>
