--- a/src/app/modules/home/components/new-transfer-form/new-transfer-form.component.html
+++ b/src/app/modules/home/components/new-transfer-form/new-transfer-form.component.html
@@ -1,4 +1,4 @@
-<form>
+<form method="post" (ngSubmit)="onSubmit()" [formGroup]="form">
   <fieldset>
     <legend>Añadir nueva transferencia</legend>
     <div>
@@ -9,12 +9,12 @@
         ></option>
       </datalist>
       <label for="platform">Selecciona la plataforma</label>
-      <input list="platforms" id="platform" />
+      <input list="platforms" id="platform" formControlName="platform" />
     </div>
     <div class="flex">
       <div>
         <label for="value">Valor transferido</label>
-        <input type="text" id="value" />
+        <input type="text" id="value" formControlName="value" />
       </div>
       <div>
         <label for="amount">Cantidad</label>
