add: new components for the forms and little desing on login page

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -1,1 +1,12 @@
-<p>login works!</p>
+<header>
+  <h1>Servinet Computers</h1>
+</header>
+<main>
+  <section role="region" id="login-form">
+    <app-login-form></app-login-form>
+  </section>
+</main>
+<footer>
+  <h2>Servinet Computers</h2>
+  <address>Versión: 1.0 - &copy; 2023</address>
+</footer>
