--- a/src/app/modules/auth/components/login-form/login-form.component.html
+++ b/src/app/modules/auth/components/login-form/login-form.component.html
@@ -1,1 +1,16 @@
-<p>login-form works!</p>
+<form>
+  <fieldset>
+    <div>
+      <label for="email">Correo electrónico</label>
+      <input type="email" placeholder="Correo electrónico" id="email" />
+    </div>
+    <div>
+      <div class="input-password">
+        <label for="password">Contraseña</label>
+        <span><a href="">¿Olvidate tu contraseña?</a></span>
+      </div>
+      <input type="password" placeholder="*********" id="password" />
+    </div>
+    <button type="submit">Iniciar sesión</button>
+  </fieldset>
+</form>
