--- a/src/app/modules/auth/components/login-form/login-form.component.css
+++ b/src/app/modules/auth/components/login-form/login-form.component.css
@@ -19,12 +19,14 @@ button {
   font-weight: 600;
   font-size: 1rem;
   border: 2px solid;
+  border-radius: 0.5rem;
 }
 
 input {
   font-size: 0.9rem;
   color: #3f3f3f;
-  border: 2px solid #7f7f7f;
+  border: none;
+  border-bottom: 2px solid #7f7f7f;
 }
 
 input,
@@ -32,11 +34,19 @@ button {
   font-family: inherit;
   padding: 0.5rem 0.8rem;
   width: 100%;
-  border-radius: 0.5rem;
 }
 
 button:hover {
   cursor: pointer;
+}
+
+input:focus {
+  outline: none;
+  border-color: #66aaff;
+}
+
+input:valid {
+  border-color: #3f7fce;
 }
 
 .input-password {
