--- a/src/app/modules/auth/components/login-form/login-form.component.html
+++ b/src/app/modules/auth/components/login-form/login-form.component.html
@@ -2,14 +2,19 @@
   <fieldset>
     <div>
       <label for="email">Correo electrónico</label>
-      <input type="email" placeholder="Correo electrónico" id="email" />
+      <input
+        type="email"
+        placeholder="Correo electrónico"
+        id="email"
+        required
+      />
     </div>
     <div>
       <div class="input-password">
         <label for="password">Contraseña</label>
         <span><a href="">¿Olvidate tu contraseña?</a></span>
       </div>
-      <input type="password" placeholder="*********" id="password" />
+      <input type="password" placeholder="*********" id="password" required />
     </div>
     <button type="submit">Iniciar sesión</button>
   </fieldset>
