--- a/src/app/modules/auth/components/login-form/login-form.component.html
+++ b/src/app/modules/auth/components/login-form/login-form.component.html
@@ -12,7 +12,7 @@
     <div>
       <div class="input-password">
         <label for="password">Contraseña</label>
-        <span><a href="">¿Olvidate tu contraseña?</a></span>
+        <span><a href="">¿Olvidaste tu contraseña?</a></span>
       </div>
       <input type="password" placeholder="*********" id="password" required />
     </div>
