--- a/src/app/modules/auth/pages/login/login.component.css
+++ b/src/app/modules/auth/pages/login/login.component.css
@@ -10,8 +10,8 @@ footer {
   left: 0;
   right: 0;
   text-align: center;
-  background-color: #0f0f0f;
-  color: #f7f7f7;
+  background-color: var(--black-color);
+  color: var(--background-color);
   padding: 1.5rem;
 }
 
@@ -28,7 +28,7 @@ footer h2 {
   max-width: 400px;
   margin: 2rem auto;
   padding: 1.5rem 1rem;
-  background-color: #ffffff;
+  background-color: var(--white-color);
   border-radius: 1rem;
-  box-shadow: 0 0 0.8rem 0.2rem #dfdfdf;
+  box-shadow: 0 0 0.8rem 0.2rem var(--shadow-color);
 }
