--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+  --primary-color: #9767f9;
+  --secondary-color: #3f7fce;
+  --black-color: #0f0f0f;
+  --darker-primary-color: #8d66da;
+  --background-color: #f7f7f7;
+  --white-color: #ffffff;
+  --black-color: #0f0f0f;
+  --shadow-color: #dfdfdf;
+  --light-gray-color: #7f7f7f;
+  --label-color: #4f4f4f;
+  --input-color: #3f3f3f;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -9,7 +23,7 @@ html {
 
 body {
   font-family: "Inter", sans-serif;
-  background-color: #f7f7f7;
+  background-color: var(--background);
   margin: 0;
 }
 
