--- a/src/app/modules/layout/components/navbar/navbar.component.css
+++ b/src/app/modules/layout/components/navbar/navbar.component.css
@@ -6,11 +6,12 @@ h1 {
 
 hr {
   width: 85%;
+  border: 1px solid var(--light-primary-color);
 }
 
 nav {
-  color: #f7f7f7;
-  background-color: #124c59;
+  color: var(--background-color);
+  background-color: var(--darker-primary-color);
 }
 
 ul {
@@ -43,7 +44,7 @@ ul li a span {
 }
 
 ul li:hover {
-  background-color: #1a6e81;
+  background-color: var(--light-primary-color);
 }
 
 @media (min-width: 700px) {
