--- a/src/app/modules/reports/components/final-stats/final-stats.component.css
+++ b/src/app/modules/reports/components/final-stats/final-stats.component.css
@@ -10,7 +10,7 @@
 
 p {
   font-size: 0.9rem;
-  color: #2f2f2f;
+  color: var(--text-color);
 }
 
 p span {
@@ -23,10 +23,10 @@ button {
   font-family: inherit;
   font-size: 0.8rem;
   font-weight: 600;
-  background-color: #298296;
-  color: #f7f7f7;
+  background-color: var(--secondary-color);
+  color: var(--background-color);
   border-radius: 0.5rem;
-  border: 0.15rem solid #124c59;
+  border: 0.15rem solid;
 }
 
 .separator {
