--- a/src/app/modules/shared/components/header-title/header-title.component.css
+++ b/src/app/modules/shared/components/header-title/header-title.component.css
@@ -3,9 +3,9 @@ h2 {
 }
 
 header {
-  color: #f7f7f7;
+  color: var(--background-color);
   padding: 0.7rem 3.5rem;
-  background: #124c59;
+  background: var(--darker-primary-color);
   border-top-right-radius: 4rem;
   border-bottom-right-radius: 4rem;
   margin: 2rem 0 4rem 0;
