move login footer to a subcomponent and create new module for portal login

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -6,7 +6,4 @@
     <app-login-form></app-login-form>
   </section>
 </main>
-<footer>
-  <h2>Servinet Computers</h2>
-  <address>Versión: 1.0 - &copy; 2023</address>
-</footer>
+<app-login-footer></app-login-footer>
