add: temporary design for the form and images

--- a/src/app/modules/portal/pages/login/login.component.html
+++ b/src/app/modules/portal/pages/login/login.component.html
@@ -1,1 +1,13 @@
-<p>login works!</p>
+<main>
+  <section role="region" id="images">
+    <h2>Imágenes</h2>
+  </section>
+  <section role="region" id="form">
+    <h2>Bienvenido a Animalaya</h2>
+    <app-login-form></app-login-form>
+    <footer>
+      <h2>Servinet Computers</h2>
+      <address>Versión: 1.0 - &copy; 2023</address>
+    </footer>
+  </section>
+</main>
