update: images design

--- a/src/app/modules/portal/pages/login/login.component.html
+++ b/src/app/modules/portal/pages/login/login.component.html
@@ -1,6 +1,7 @@
 <main>
   <section role="region" id="images">
-    <h2>Imágenes</h2>
+    <img src="assets/images/img1.jpg" alt="img1" />
+    <img src="assets/images/img2.jpg" alt="" />
   </section>
   <section role="region" id="form">
     <h2>Bienvenido a Animalaya</h2>
