--- a/src/app/modules/portal/pages/login/login.component.css
+++ b/src/app/modules/portal/pages/login/login.component.css
@@ -11,6 +11,14 @@ h2 {
 
 #images {
   width: 65%;
+  height: 100%;
+}
+
+#images img {
+  display: block;
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
 }
 
 #form {
