--- a/src/app/modules/admin/pages/login/login.component.html
+++ b/src/app/modules/admin/pages/login/login.component.html
@@ -1,9 +1,14 @@
-<header>
-  <h1>Servinet Computers</h1>
-</header>
 <main>
-  <section role="region" id="login-form">
-    <app-login-form></app-login-form>
-  </section>
+  <div class="card">
+    <section role="region" id="welcome">
+      <header>
+        <h1>¡Bienvenido!</h1>
+        <h2>Julio Bautista Doctor</h2>
+      </header>
+    </section>
+    <section role="region" id="login-form">
+      <app-login-form></app-login-form>
+    </section>
+  </div>
 </main>
 <app-login-footer></app-login-footer>
