add: platforms table

--- a/src/app/modules/admin/pages/portal/portal.component.html
+++ b/src/app/modules/admin/pages/portal/portal.component.html
@@ -16,4 +16,49 @@
       </div>
     </div>
   </section>
+  <section role="region" id="platforms">
+    <table>
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Plataforma</th>
+          <th>Transferencias</th>
+          <th>Total</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>MoviiRed</td>
+          <td>8</td>
+          <td>$8.000.000</td>
+          <td>
+            <span>X</span>
+            <span>Editar</span>
+          </td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Bogotá</td>
+          <td>2</td>
+          <td>$2.000.000</td>
+          <td>
+            <span>X</span>
+            <span>Editar</span>
+          </td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Puntored</td>
+          <td>0</td>
+          <td>$0</td>
+          <td>
+            <span>X</span>
+            <span>Editar</span>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
 </main>
