--- a/src/app/modules/admin/pages/portal/portal.component.css
+++ b/src/app/modules/admin/pages/portal/portal.component.css
@@ -1,9 +1,10 @@
 main {
-  margin-top: 5rem;
+  margin-top: 4rem;
+  display: flex;
 }
 
 #campuses {
-  width: 40%;
+  width: 45%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -44,4 +45,39 @@ main {
 
 .numeral::before {
   content: "Sede ";
+}
+
+#platforms {
+  width: 55%;
+  height: calc(100vh - 4rem);
+}
+
+#platforms table {
+  width: 100%;
+  table-layout: fixed;
+  border-collapse: collapse;
+}
+
+#platforms table thead {
+  color: var(--input-color);
+  border-bottom: 2px solid var(--light-primary-color);
+}
+
+#platforms table tbody {
+  color: var(--text-color);
+  font-size: 0.9rem;
+}
+
+#platforms th,
+#platforms td {
+  text-align: left;
+  padding: 0.8rem 1.2rem;
+}
+
+#platforms tbody tr:nth-child(even) {
+  background-color: #efefef;
+}
+
+#platforms tbody tr:hover {
+  background-color: #dfdfdf;
 }
