--- a/src/app/modules/admin/pages/portal/portal.component.html
+++ b/src/app/modules/admin/pages/portal/portal.component.html
@@ -33,9 +33,9 @@
           <td>MoviiRed</td>
           <td>8</td>
           <td>$8.000.000</td>
-          <td>
-            <span>X</span>
-            <span>Editar</span>
+          <td class="actions">
+            <span class="material-symbols-outlined">edit</span>
+            <span class="material-symbols-outlined">delete</span>
           </td>
         </tr>
         <tr>
