--- a/src/app/modules/admin/components/login-form/login-form.component.css
+++ b/src/app/modules/admin/components/login-form/login-form.component.css
@@ -15,12 +15,12 @@ label {
   font-size: 0.8rem;
   margin-bottom: 0.25rem;
   font-weight: 600;
-  color: var(--label-color);
+  color: var(--gray-color-900);
 }
 
 button {
   color: var(--background-color);
-  background-color: var(--primary-color);
+  background-color: var(--primary-color-500);
   font-weight: 600;
   font-size: 1rem;
   border: 2px solid;
@@ -33,8 +33,8 @@ button {
 input {
   background-color: var(--white-color);
   font-size: 0.9rem;
-  color: var(--input-color);
-  border: 2px solid var(--light-gray-color);
+  color: var(--gray-color-900);
+  border: 2px solid var(--gray-color-400);
   border-radius: 0.4rem;
   width: 100%;
 }
@@ -47,13 +47,17 @@ button {
 
 button:hover {
   cursor: pointer;
-  background-color: var(--darker-primary-color);
+  background-color: var(--primary-color-600);
+}
+
+button:active {
+  background-color: var(--primary-color-700);
 }
 
 input:focus,
 input:valid {
   outline: none;
-  border-color: var(--primary-color);
+  border-color: var(--secondary-color-500);
 }
 
 .input-password {
@@ -63,10 +67,14 @@ input:valid {
 }
 
 .input-password a {
+  color: var(--secondary-color-600);
   display: block;
   text-decoration: none;
   font-size: 0.75rem;
-  color: var(--secondary-color);
   font-weight: 600;
   margin-bottom: 0.25rem;
+}
+
+.input-password a:hover {
+  color: var(--secondary-color-500);
 }
