--- a/src/app/modules/admin/components/navbar/navbar.component.css
+++ b/src/app/modules/admin/components/navbar/navbar.component.css
@@ -3,7 +3,7 @@ header {
   top: 0;
   width: 100%;
   height: 4rem;
-  background-color: var(--darker-primary-color);
+  background-color: var(--primary-color-700);
   color: var(--background-color);
   padding: 0 1rem;
 }
@@ -36,5 +36,9 @@ header ul li {
 }
 
 .account:hover {
-  background-color: var(--primary-color);
+  background-color: var(--primary-color-800);
+}
+
+.account:active {
+  background-color: var(--primary-color-900);
 }
