--- a/src/app/modules/reports/components/final-stats/final-stats.component.css
+++ b/src/app/modules/reports/components/final-stats/final-stats.component.css
@@ -9,12 +9,16 @@
 }
 
 p {
+  color: var(--gray-color-900);
+  background-color: var(--secondary-color-200);
   font-size: 0.9rem;
-  color: var(--text-color);
+  font-weight: 600;
+  padding: 0.3rem 0.85rem;
+  border-radius: 0.6rem;
 }
 
 p span {
-  font-style: italic;
+  color: var(--secondary-color-600);
 }
 
 button {
@@ -23,10 +27,10 @@ button {
   font-family: inherit;
   font-size: 0.8rem;
   font-weight: 600;
-  background-color: var(--secondary-color);
+  background-color: var(--secondary-color-500);
   color: var(--background-color);
   border-radius: 0.5rem;
-  border: 0.15rem solid;
+  border: none;
 }
 
 .separator {
@@ -34,10 +38,20 @@ button {
   align-self: center;
   width: 2px;
   height: 2rem;
-  background-color: #afafaf;
+  background-color: var(--gray-color-300);
+}
+
+button,
+p {
+  text-align: center;
+  width: 10rem;
 }
 
 button:hover {
   cursor: pointer;
-  background-color: #3298af;
+  background-color: var(--secondary-color-600);
+}
+
+button:active {
+  background-color: var(--secondary-color-700);
 }
