--- a/src/app/modules/shared/components/header-title/header-title.component.css
+++ b/src/app/modules/shared/components/header-title/header-title.component.css
@@ -5,7 +5,7 @@ h2 {
 header {
   color: var(--background-color);
   padding: 0.7rem 3.5rem;
-  background: var(--darker-primary-color);
+  background: var(--primary-color-700);
   border-top-right-radius: 4rem;
   border-bottom-right-radius: 4rem;
   margin: 2rem 0 4rem 0;
