--- a/src/app/modules/admin/components/navbar/navbar.component.html
+++ b/src/app/modules/admin/components/navbar/navbar.component.html
@@ -1,10 +1,3 @@
 <header>
-  <ul>
-    <li></li>
-    <li>Total transferido: $12.700.000</li>
-    <li class="account">
-      <span class="material-symbols-outlined">account_circle</span>
-      <span>1 | Julio Bautista</span>
-    </li>
-  </ul>
+  <span class="material-symbols-outlined"> menu </span>
 </header>
