--- a/src/styles.css
+++ b/src/styles.css
@@ -45,6 +45,8 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -54,7 +56,6 @@ html {
 body {
   font-family: "Inter", sans-serif;
   background-color: var(--background-color);
-  margin: 0;
 }
 
 .material-symbols-outlined {
