--- a/src/app/modules/admin/components/navbar/navbar.component.html
+++ b/src/app/modules/admin/components/navbar/navbar.component.html
@@ -1,3 +1,9 @@
 <header>
-  <span class="material-symbols-outlined"> menu </span>
+  <button type="button" class="menu">
+    <span class="material-symbols-outlined"> menu </span>
+  </button>
+  <button type="button" class="account">
+    <span>ID 7 - ACCOUNT NAME</span>
+    <span class="material-symbols-outlined"> expand_more </span>
+  </button>
 </header>
