--- a/src/app/modules/admin/components/navbar/navbar.component.html
+++ b/src/app/modules/admin/components/navbar/navbar.component.html
@@ -7,3 +7,32 @@
     <span class="material-symbols-outlined"> expand_more </span>
   </button>
 </header>
+<nav>
+  <ul>
+    <li>
+      <a>
+        <span class="material-symbols-outlined"> dashboard </span>
+        Panel de usuario
+      </a>
+    </li>
+    <li>
+      <a>
+        <span class="material-symbols-outlined"> lists </span>
+        Plataformas
+      </a>
+    </li>
+    <li>
+      <a>
+        <span class="material-symbols-outlined"> holiday_village </span>
+        Sedes
+      </a>
+    </li>
+  </ul>
+  <div>
+    <hr />
+    <a>
+      <span class="material-symbols-outlined"> logout </span>
+      Cerrar sesión
+    </a>
+  </div>
+</nav>
