--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -1,1 +1,9 @@
 <app-navbar></app-navbar>
+<main>
+  <section id="campuses" role="region">
+    <app-campuses></app-campuses>
+  </section>
+  <section id="stats" role="region">
+    <app-stats></app-stats>
+  </section>
+</main>
