create: stats table

--- a/src/app/modules/admin/components/stats/stats.component.html
+++ b/src/app/modules/admin/components/stats/stats.component.html
@@ -1,1 +1,24 @@
-<p>stats works!</p>
+<table>
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Plataforma</th>
+      <th>Transferencias</th>
+      <th>Total</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>2</td>
+      <td>MoviiRed</td>
+      <td>8</td>
+      <td>$8.000.000</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>Puntored</td>
+      <td>2</td>
+      <td>$1.999.999</td>
+    </tr>
+  </tbody>
+</table>
