--- a/src/app/modules/admin/pages/dashboard/dashboard.component.css
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.css
@@ -1,3 +1,20 @@
 main {
-  margin: 5rem 0 0 14rem;
+  background-color: var(--white-color);
+  margin: 6rem 2rem 2rem 15rem;
+  height: calc(100vh - 8rem);
+  border-radius: 1rem;
+  padding: 2rem;
+  box-shadow: var(--shadow);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#campuses,
+#stats {
+  width: 100%;
+  border: 0.15rem solid var(--primary-color-400);
+  border-radius: 1rem;
+  padding: 1rem;
 }
