create: campuses design

--- a/src/app/modules/admin/components/campuses/campuses.component.html
+++ b/src/app/modules/admin/components/campuses/campuses.component.html
@@ -1,1 +1,16 @@
-<p>campuses works!</p>
+<div class="flex">
+  <div>
+    <h2>Total</h2>
+    <p>$12.000.000</p>
+  </div>
+  <div class="separator"></div>
+  <div>
+    <h2>Sede 1</h2>
+    <p>$9.999.999</p>
+  </div>
+  <div class="separator"></div>
+  <div>
+    <h2>Sede 2</h2>
+    <p>$2.000.001</p>
+  </div>
+</div>
