create: the other admin pages and add router

--- a/src/app/modules/admin/components/navbar/navbar.component.html
+++ b/src/app/modules/admin/components/navbar/navbar.component.html
@@ -10,19 +10,19 @@
 <nav>
   <ul>
     <li>
-      <a>
+      <a routerLink="../dashboard">
         <span class="material-symbols-outlined"> dashboard </span>
         Panel de usuario
       </a>
     </li>
     <li>
-      <a>
+      <a routerLink="../platforms">
         <span class="material-symbols-outlined"> lists </span>
         Plataformas
       </a>
     </li>
     <li>
-      <a>
+      <a routerLink="../campuses">
         <span class="material-symbols-outlined"> holiday_village </span>
         Sedes
       </a>
