update: the table styles are globally defined

--- a/src/styles.css
+++ b/src/styles.css
@@ -61,3 +61,32 @@ body {
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+thead {
+  color: var(--gray-color-900);
+  border-bottom: 2px solid var(--primary-color-600);
+}
+
+tbody {
+  color: var(--gray-color-900);
+  font-size: 0.9rem;
+}
+
+th,
+td {
+  text-align: left;
+  padding: 0.8rem 1.2rem;
+}
+
+tbody tr:nth-child(even) {
+  background-color: var(--gray-color-100);
+}
+
+tbody tr:hover {
+  background-color: var(--gray-color-300);
+}
