create: platform's page design

--- a/src/app/modules/admin/pages/platforms/platforms.component.html
+++ b/src/app/modules/admin/pages/platforms/platforms.component.html
@@ -1,1 +1,48 @@
-<p>platforms works!</p>
+<app-navbar></app-navbar>
+<main>
+  <section>
+    <header>
+      <h2>Plataformas registradas</h2>
+      <span class="add material-symbols-outlined"> add </span>
+    </header>
+    <table>
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Nombre</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Puntored</td>
+          <td>
+            <span class="right material-symbols-outlined"> chevron_right </span>
+          </td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>MoviiRed</td>
+          <td>
+            <span class="right material-symbols-outlined"> chevron_right </span>
+          </td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>TuLlave</td>
+          <td>
+            <span class="right material-symbols-outlined"> chevron_right </span>
+          </td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>BeMovil</td>
+          <td>
+            <span class="right material-symbols-outlined"> chevron_right </span>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+</main>
