create: campus' page design

--- a/src/app/modules/admin/pages/campuses/campuses.component.html
+++ b/src/app/modules/admin/pages/campuses/campuses.component.html
@@ -1,1 +1,48 @@
-<p>campuses works!</p>
+<app-navbar></app-navbar>
+<main>
+  <section>
+    <header>
+      <h2>Sedes registradas</h2>
+      <span class="add material-symbols-outlined"> add </span>
+    </header>
+    <table>
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Nombre</th>
+          <th>Dirección</th>
+          <th>Celular</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Sede 1</td>
+          <td>Carrera 15 #14 - 24 Norte, Mosquita, Los Laureles</td>
+          <td>315 948 2584</td>
+          <td class="right">
+            <span class="material-symbols-outlined"> chevron_right </span>
+          </td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Sede 1</td>
+          <td>Carrera 15 #14 - 24 Norte, Mosquita, Los Laureles</td>
+          <td>315 948 2584</td>
+          <td class="right">
+            <span class="material-symbols-outlined"> chevron_right </span>
+          </td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Sede 1</td>
+          <td>Carrera 15 #14 - 24 Norte, Mosquita, Los Laureles</td>
+          <td>315 948 2584</td>
+          <td class="right">
+            <span class="material-symbols-outlined"> chevron_right </span>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+</main>
