--- a/src/app/modules/admin/pages/platforms/platforms.component.html
+++ b/src/app/modules/admin/pages/platforms/platforms.component.html
@@ -2,10 +2,16 @@
 <main>
   <section>
     <header>
-      <h2>Plataformas registradas</h2>
-      <span class="add material-symbols-outlined"> add </span>
+      <h2>{{ headerTitle }}</h2>
+      <span
+        class="add material-symbols-outlined"
+        (click)="setIsRegistering()"
+        *ngIf="!isRegistering"
+      >
+        add
+      </span>
     </header>
-    <table>
+    <table *ngIf="!isRegistering">
       <thead>
         <tr>
           <th>#</th>
@@ -14,35 +20,22 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>1</td>
-          <td>Puntored</td>
-          <td>
-            <span class="right material-symbols-outlined"> chevron_right </span>
-          </td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>MoviiRed</td>
-          <td>
-            <span class="right material-symbols-outlined"> chevron_right </span>
-          </td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>TuLlave</td>
-          <td>
-            <span class="right material-symbols-outlined"> chevron_right </span>
-          </td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>BeMovil</td>
+        <tr *ngFor="let platform of platforms">
+          <td>{{ platform.id }}</td>
+          <td>{{ platform.name }}</td>
           <td>
             <span class="right material-symbols-outlined"> chevron_right </span>
           </td>
         </tr>
       </tbody>
     </table>
+    <form *ngIf="isRegistering" (ngSubmit)="onSubmit()" [formGroup]="form">
+      <label for="platform">Nombre de la plataforma</label>
+      <input type="text" id="platform" formControlName="name" />
+      <div class="actions">
+        <button type="submit">Registrar</button>
+        <button type="button" (click)="setIsRegistering()">Cancelar</button>
+      </div>
+    </form>
   </section>
 </main>
